src/test/ui/feature-gates/feature-gate-trait_upcasting.stderr
error[E0658]: trait upcasting coercion is experimental
  --> $DIR/feature-gate-trait_upcasting.rs:11:25
   |
LL |     let foo: &dyn Foo = bar;
   |                         ^^^
   |
   = note: see issue #65991 <https://github.com/rust-lang/rust/issues/65991> for more information
   = help: add `#![feature(trait_upcasting)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
